system-dashboards/system-dashboards-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "vpx"
    ingress.citrix.com/frontend-ip: x.x.x.x
    ingress.citrix.com/secure-backend: '{"kubernetes-dashboard":"true"}'
spec:
  tls:
  - secretName: demo-wildcard-cert
  rules:
  - host: dashboard.mk8s-demohost.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "vm"
spec:
  tls:
  - secretName: demo-wildcard-cert
  rules:
  - host: grafana.mk8s-demohost.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "vm"
spec:
  tls:
  - secretName: demo-wildcard-cert
  rules:
  - host: prometheus.mk8s.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
